--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -314,6 +314,11 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === Deleting `<li>` elements that only contained `<br>` tags sometimes caused a crash
 // TINY-6888
+In previous version of {productname}, "Uncaught TypeError: Cannot read property 'nextSibling' of null" would be thrown in some specific use cases such as after the removal of a `<li>` element.
+
+Previously, `<li>` elements used the same caret position as the parent of the new caret container, but after removal of the `<li>` element, the editor would try to use `ToggleList.mergeWithAdjacentLists` which is used on the `otherLi.parentNode`, which triggered the TypeError, as the editor had already removed the `otherLi`.
+
+To solve this, {productname} 6.7 now uses the `otherLi.parentNode` reference is stored in a `const` before the removal.
 
 === It was possible to remove the `<summary>` element from a `<details>` element by dragging and dropping
 // TINY-9960
