--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -55,6 +55,12 @@ The {productname} 6.7.0 release includes an accompanying release of the **Advanc
 ==== New AdvTemplateInsertTemplateById command to insert the template specified by its id property value
 // TINY-9976
 
+**Advanced Templates** 1.3.0 includes a new command, `AdvTemplateInsertTemplateById`.
+
+This command enables the adding of a new template, specified by its ID, to a {productname} document.
+
+See the xref:advanced-templates.adoc#commands[Commands] section of the xref:advanced-templates.adoc[Advanced Templates] documentation for an example of the command in use.
+
 ==== New {{mce-cursor}} marker to indicate the cursor position after the template is inserted
 // TINY-9973
 
