--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -313,11 +313,11 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 // TINY-9965
 In previous versions of the xref:accordion.adoc[Accordion Plugin], when inserting an accordion component inside the body of another accordion, it was possible to delete the summary block element of the nested accordion.
 
-{productname} 6.7 introduced a fix that now blocks the `delete` and `backspace` keys when pressed within a empty block before an nested accordion.
+{productname} 6.7 addresses this by blocking *Delete* and *Backspace* key presses when the insertion point is within an empty block before a nested Accordion component.
 
-As a result, using `delete` and `backspace` keys no longer allow the user to delete into the summary element of the accordion, and the caret remains in the empty block before the accordion.
+As a result, using the *Delete* or *Backspace*` keys no longer allows a user to delete into the summary element of an Accordion component, and the insertion point remains in the empty block before the Accordion.
 
-For information on the **Accordion** plugin see xref:accordion.adoc[Accordion]
+For more information on the **Accordion** plugin see xref:accordion.adoc[Accordion].
 
 === Deleting `<li>` elements that only contained `<br>` tags sometimes caused a crash
 // TINY-6888
