--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -302,6 +302,13 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === Creating lists in empty blocks sometimes, and incorrectly, converted adjacent block elements into list items
 // TINY-10136
+A previous fix to lists within table cells was implemented, which included an adjustment to the DOM hierarchy traversal.
+
+Previously, when advancing to the next leaf element in the hierarchy, the process didn't take into account whether this leaf element was correctly nested under its parent, occasionally leading to it straying outside its intended parent.
+
+As a consequence, one or more unexpected elements were added to the list.
+
+{productname} 6.7, addresses this fix by setting the expected block parent as the boundary for DOM tree traversal, ensuring that it doesn't extend beyond this defined limit. As a result, any extraneous elements are now effectively excluded from the list.
 
 === Creating a list from multiple `<div>` elements only created a partial list
 // TINY-9872
