--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -299,6 +299,15 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === The Quick Toolbars plugin showed text alignment buttons on pagebreaks
 // TINY-10054
+Previously in {productname}, and issue was identified where xref:quickbars.adoc[Quickbars], a feature for changing alignment, did not properly consider page breaks.
+
+As a consequence, when a page break was encountered, the context toolbar would display alignment options.
+
+{productname} 6.7, addresses this fix which involved adding a check to page breaks for the Quickbars functionality.
+
+As a result of this fix, the context menu no longer display's alignment options when a page break is encountered.
+
+For information on the **Quickbars** plugin, see: xref:quickbars.adoc[Quickbars].
 
 === Creating lists in empty blocks sometimes, and incorrectly, converted adjacent block elements into list items
 // TINY-10136
