--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -104,6 +104,10 @@ The {productname} 6.7.0 release includes an accompanying release of the **Commme
 // TINY-10089
 
 
+Previously, when a comment was added to an existing comment thread in a {productname} document, an expected change event was not fired, and the expected *Editor changed* message was not sent to the console.
+
+**Comments** 3.3.3 corrects this. When comments are added to extant threads, the change event is now fired as expected, and the *Editor changed* message is sent to the console, also as expected.
+
 
 === Enhanced Media Embed 3.1.3
 
